# python_perf

./: README.md
02_Demos/: arg_kwargs.py  class_dynamic.py  class_objet.py  classe_abstraite_interfaces.py  contexte_manager.py  demo01.py  demo02.py  demo03.py  demo04.py  demo_collections.py  demo_fonction_contenurs.py  duck_typing.py  dunderscore_arithmetique.py  dunderscore_cast.py  dunderscore_comparaison.py  dunderscore_conteneur.py  exception_custom.py  heritage_v2.py  lambdas.py  pile_file.py  polymorphe.py  try_except.py  visibilite.py
02_Demos/base_python/: poo_base.py  poo_base_suite.py  rappel_basic.py
02_Demos/demo_client_web/: demo_server.py  test.txt
02_Demos/demo_env/: commande_env_python.md  test_requests.py
02_Demos/demo_json/: demo_json.py  file.json
02_Demos/demo_module/: main.py  utils.py
02_Demos/demo_packaging_python/mylib/: README.md  pyproject.toml
02_Demos/demo_packaging_python/mylib/src/mylib/: __init__.py  core.py
02_Demos/demo_socket_client_serveur/: demo_tcp_client.py  demo_tcp_server.py
02_Demos/demo_thread/: demo01.py  demo02.py  demo03.py  demo04.py  demo05_semaphore.py  demo06_mutex_v1.py  demo07_mutex_v2.py  demo08_deadlock.py  demo09_module_future.py
02_Demos/demo_xml/: demo_dom.py  demo_etree.py  demo_xml.py  exemple.xml  exemple2.xml  result.html  result.xml  source.xml  style.xsl  style_html.xsl  (+4 more)
03_Exercices/: banque.py  compte_bancaire.py  exercice1_thread.py  exerciceABC.py  gateau.py  login.py  notebook.py  personne.py  rectangle.py  thread_slide41.py  thread_slide42.py  tp_intervals.py  watertank.py
(+12 files in other folders)
